; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/sound/midi/extr_mpu401.c_mpu401_minit.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/sound/midi/extr_mpu401.c_mpu401_minit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_midi = type { i32 }
%struct.mpu401 = type { i32 }

@MPU_RESET = common dso_local global i32 0, align 4
@MPU_UART = common dso_local global i32 0, align 4
@MPU_ACK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_midi*, i8*)* @mpu401_minit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mpu401_minit(%struct.snd_midi* %0, i8* %1) #0 {
  %3 = alloca %struct.snd_midi*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.mpu401*, align 8
  %6 = alloca i32, align 4
  store %struct.snd_midi* %0, %struct.snd_midi** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.mpu401*
  store %struct.mpu401* %8, %struct.mpu401** %5, align 8
  %9 = load %struct.mpu401*, %struct.mpu401** %5, align 8
  %10 = load i32, i32* @MPU_RESET, align 4
  %11 = call i32 @CMD(%struct.mpu401* %9, i32 %10)
  %12 = load %struct.mpu401*, %struct.mpu401** %5, align 8
  %13 = load i32, i32* @MPU_UART, align 4
  %14 = call i32 @CMD(%struct.mpu401* %12, i32 %13)
  ret i32 0
}

declare dso_local i32 @CMD(%struct.mpu401*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
